syntax = "proto3";
package protocol;

option go_package = "./protocol";

enum LangSet {
    CPP = 0;
    JAVA = 1;
    PYTHON = 2;
    GO = 3;
}

message Judge {
    string sid = 1;
    string pid = 2;
    string uid = 3;
    string cid = 4;
    int64 timeLimit = 5;
    int64 memoryLimit = 6;
    repeated string testCases = 7;
    LangSet lang = 8;
    string submitCode = 9;
    int64 submitTimestamp = 10;
}